--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+ <head>
+   <title> Thanks to ANTONIO MEZE </title>
+<meta http-equiv="Refresh" content="0; url='https://darrygrande.github.io/
+KeyboardSynt_2022_1/test'" />
+ </head>
+  <body>
+    
+  </body>
+  
+</html>
